k8s/infra/keycloak/keycloak-db.yaml
# Keycloak will use a database for persistence, hence this manifest file

# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
  labels:
    app: keycloak  # Label that identifies this as part of the Keycloak application group
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak # Selector for identifying which Pods this Deployment manages - must match Pod template labels below
  template: # Template contains the blueprint for pods
    metadata:
      labels:
        app: keycloak # Label applied to Pods - must match Deployment selector above and Service selector below
    spec:
      containers:
        - name: keycloak-db
          image: postgres:16.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: keycloak-data
      volumes:
        - name: keycloak-data # Volume name that corresponds to volumeMount above
          persistentVolumeClaim:
            claimName: keycloak-db-pvc # references the PVC in 'keycloak-storage.yaml'

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db-service
  labels:
    app: keycloak # Label that identifies this service as part of the Keycloak application group
spec:
  type: ClusterIP # Internal cluster access only - not exposed externally
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: keycloak # Selects Pods with matching label to receive traffic from this Service
