k8s/infra/keycloak/keycloak.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak # groups this deployment with other Keycloak-related resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak # tells k8s which pods it should manage. This MUST match the template labels
  template:
    metadata:
      name: keycloak
      labels:
        app: keycloak # defines what labels the pods will have when created. This MUST match the selector above
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          args: ["start-dev"] # Add this for development mode
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
  strategy:
      # RollingUpdate strategy ensures zero-downtime during deployments by gradually updating pods
    type: RollingUpdate
    rollingUpdate:
        # Allow creating max 1 pod above desired count during updates
        # Example: If replicas=3, we can have 4 pods temporarily during update
      maxSurge: 1
        # Ensure no pods become unavailable during the update
        # Forces new pods to be ready before removing old ones
      maxUnavailable: 0

---

# Service
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  labels:
    app: keycloak # groups this service with other Keycloak-related resources
spec:
  selector:
    app: keycloak # Matches Deployment's label
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080 # The port other services use to access
      targetPort: 8080
